cluster/core/rook-ceph/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: rook-ceph-mgr-dashboard
  namespace: rook-ceph
spec:
  hosts:
  - ceph.${ROOT_DOMAIN}
  gateways:
  - istio-ingress/cluster-ingress-gateway
  http:
  - route:
    - destination:
        port:
          number: 7000
        host: rook-ceph-mgr-dashboard.rook-ceph.svc.cluster.local
